--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-google-charts": "^5.2.1",
     "react-icons": "^5.5.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
